syntax = "proto3";

package pb_impl;

option go_package = "./pb_impl";

import "google/protobuf/empty.proto";

message DataRequest {
  // string title = 1;
  // int32 total_size = 2;
  bytes data = 1;
}

message DataResponse {
  string message = 1;
}

service DataService {
  rpc SendData(DataRequest) returns (DataResponse);
  rpc SendStream(stream DataRequest) returns (DataResponse);
}

service NoAuthService {
  rpc SayHello(google.protobuf.Empty) returns (google.protobuf.Empty);
}

service AuthService {
  rpc SayGoodBye(google.protobuf.Empty) returns (google.protobuf.Empty);
}